--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -7,3 +7,18 @@
 .c {
   color: goldenrod;
 }
+
+.box{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+input{
+  margin: 2px 0;
+}
+
+.buttonSend{
+  margin: 0 auto;
+  width: 20%;
+}
